--- a/index.scss
+++ b/index.scss
@@ -3,9 +3,7 @@
 .field {
     position: relative;
     width: fit-content;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 
-        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', 
-        sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',  Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     input[type=text] {
         height: 2rem;
@@ -13,6 +11,10 @@
         padding: 0 8px;
         outline: none;
         border: 1px solid;
+
+        &#data {
+            width: calc(500px - 18px);
+        }
     }
 
     input[type=text] + .label {
@@ -21,6 +23,8 @@
         top: .4rem;
         color: #888;
         transition: .2s ease-out all;
+        pointer-events: none;
+        user-select: none;
     }
 
     input[type=text]:focus + .label,
@@ -40,8 +44,14 @@
     }
 }
 
-#output {
-    text-align: center;
+#app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .in {
+        margin: 30px 0;
+    }
 }
 
 svg {
@@ -60,4 +70,8 @@ svg {
     rect[clip-path="url('#clip-path-background-color')"]:hover {
         fill: #00d8d6;
     }
+}
+
+.sidebar {
+    
 }
