--- a/index.scss
+++ b/index.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+html, body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .field {
     position: relative;
     width: fit-content;
@@ -45,16 +51,47 @@
 }
 
 #app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 500px 1fr;
+    grid-template-areas: 'e1 center e2';
+    height: 100%;
+    width: 100%;
 
-    .in {
-        margin: 30px 0;
+    .center {
+        grid-area: center;
+        display: grid;
+        grid-template-rows: 100px 100px 500px 1fr;
     }
 }
 
-svg {
+.input {
+    position: relative;
+
+    &.data {
+        align-self: center;
+    }
+
+    &.advanced {
+        width: 100%;
+        overflow: hidden;
+
+        fieldset {
+            position: absolute;
+            display: inline-block;
+            width: calc(100%);
+            height: calc(100%);
+            padding: 0;
+            margin: 0;
+            border: 0;
+
+            &:not(.active) {
+                right: -100%;
+            }
+        }
+    }
+}
+
+.out svg {
     rect {
         cursor: pointer;
     }
@@ -62,16 +99,4 @@ svg {
     rect.active {
         fill: #00d8d6;
     }
-
-    rect[clip-path="url('#clip-path-dot-color')"]:hover {
-        fill: #00d8d6;
-    }
-
-    rect[clip-path="url('#clip-path-background-color')"]:hover {
-        fill: #00d8d6;
-    }
-}
-
-.sidebar {
-    
-}
+} 
